2009-07-23  Corinna Vinschen  <corinna@vinschen.de>

	* mount.h (fs_info::fsn): New member.
	(fs_info::clear): Clear fsn.
	(fs_info::fsname): New read accessor for fsn.
	* mount.cc (fs_info::update): Fill in fsn member with lowercased
	filesystem name if filesystem is not well-known.  Fall back to
	"unknown" if filesystem name is missing.
	(fillout_mntent): Print filesystem name retrieved in fs_info::update
	rather than static string "unknown".

2009-07-23  Corinna Vinschen  <corinna@vinschen.de>

	* mount.cc (fs_info::update): Revert to open filesystem with access set
	to READ_CONTROL.  If that fails, try additionally with FILE_READ_DATA.

2009-07-22  Eric Blake  <ebb9@byu.net>

	* exceptions.cc (handle_exceptions): Set si_addr according to
	POSIX for SIGSEGV.

2009-07-22  Corinna Vinschen  <corinna@vinschen.de>

	* mount.cc (fs_info::update): Open filesystem with access set to 0.
	Explain why.

2009-07-22  Corinna Vinschen  <corinna@vinschen.de>

	* mount.cc: Revert accidental checkin.

2009-07-22  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (symlink_info::check): Handle STATUS_NOT_SUPPORTED from
	NtCreateFile just like STATUS_EAS_NOT_SUPPORTED.

2009-07-22  Corinna Vinschen  <corinna@vinschen.de>

	* mount.cc (fillout_mntent): Fix typo (noexec -> notexec).

2009-07-22  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (symlink_info::check): Fix typo in comment.

2009-07-22  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.h (enum del_lock_called_from): New enumeration.
	(fhandler_base::del_my_locks): Declare taking a del_lock_called_from
	as argument.
	* fhandler.cc (fhandler_base::close): Call del_my_locks with "on_close".
	(fhandler_base::fixup_after_fork): Call del_my_locks with "after_fork".
	(fhandler_base::fixup_after_exec): Call del_my_locks with "after_exec".
	* flock.cc (fhandler_base::del_my_locks): Take del_lock_called_from
	as argument.  Call node->del_my_locks with NULL handle in after_exec
	case.  Explain why.
